@@ -45,9 +45,9 @@ copyright = u'2011, Christian Andersson and Claus Führer'
 # built documents.
 #
 # The short X.Y version.
-version = '1.4'
+version = '1.3'
 # The full version, including alpha/beta/rc tags.
-release = '1.4b2'
+release = '1.4b3'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -104,7 +104,7 @@ html_theme_path = ['../themes']
 
 # The name for this set of Sphinx documents.  If None, it defaults to
 # "<project> v<release> documentation".
-html_title = 'Assimulo 1.4b2 documentation'
+html_title = 'Assimulo 1.4b3 documentation'
 
 # A shorter title for the navigation bar.  Default is the same as html_title.
 #html_short_title = None
